--- a/TrackCoach/Main_iPad.storyboard
+++ b/TrackCoach/Main_iPad.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5037.3" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5037.3" systemVersion="13C64" targetRuntime="iOS.CocoaTouch.iPad" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <deployment defaultVersion="1552" identifier="iOS"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
@@ -300,9 +300,163 @@ More features coming soon!
             </objects>
             <point key="canvasLocation" x="858" y="57"/>
         </scene>
+        <!--Page View Controller-->
+        <scene sceneID="XyC-Jq-KQQ">
+            <objects>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="edF-Jp-Y5Q" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HAG-uP-BzY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="766" y="1348"/>
+        </scene>
+        <!--Tutorial1 View Controller-->
+        <scene sceneID="RME-FA-iub">
+            <objects>
+                <viewController storyboardIdentifier="Tutorial1ViewController" id="QSy-nL-cfe" customClass="Tutorial1ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RVK-kY-giR"/>
+                        <viewControllerLayoutGuide type="bottom" id="Z29-Th-VLO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mHz-8J-fAs">
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="TrackCoach" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0F9-mN-blT">
+                                <rect key="frame" x="296" y="25" width="177" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="33"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="◁ Start/Stop" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f38-Y8-rBQ">
+                                <rect key="frame" x="15" y="75" width="117" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="◁ Lap/Reset" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sZ8-uK-7Le">
+                                <rect key="frame" x="15" y="138" width="117" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Keep your eyes on the race! When using TrackCoach, you can use your iPhone's volume buttons to control the stopwatch!" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RP9-AZ-nsG">
+                                <rect key="frame" x="30" y="509" width="708" height="495"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="128" id="y2z-UJ-c0e"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Control With Volume Buttons" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U0F-A6-9ly">
+                                <rect key="frame" x="251" y="460" width="266" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="transparent.png" translatesAutoresizingMaskIntoConstraints="NO" id="yLt-wi-xQL">
+                                <rect key="frame" x="168" y="51" width="126" height="126"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="126" id="6nY-Mb-zev"/>
+                                    <constraint firstAttribute="width" constant="126" id="hrk-Od-pSS"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.47843137250000001" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="RP9-AZ-nsG" secondAttribute="trailing" constant="30" id="9Ug-OV-Cfu"/>
+                            <constraint firstAttribute="centerX" secondItem="0F9-mN-blT" secondAttribute="centerX" id="AWA-Sm-0pF"/>
+                            <constraint firstItem="sZ8-uK-7Le" firstAttribute="top" secondItem="f38-Y8-rBQ" secondAttribute="bottom" constant="39" id="FBS-Ye-I3n"/>
+                            <constraint firstAttribute="centerX" secondItem="U0F-A6-9ly" secondAttribute="centerX" id="FGC-GJ-BlG"/>
+                            <constraint firstAttribute="trailing" secondItem="yLt-wi-xQL" secondAttribute="trailing" constant="26" id="Fh5-lm-n2L"/>
+                            <constraint firstItem="f38-Y8-rBQ" firstAttribute="leading" secondItem="mHz-8J-fAs" secondAttribute="leading" constant="15" id="Lt5-ds-bH4"/>
+                            <constraint firstItem="sZ8-uK-7Le" firstAttribute="leading" secondItem="f38-Y8-rBQ" secondAttribute="leading" id="RRZ-dp-Qe6"/>
+                            <constraint firstItem="RP9-AZ-nsG" firstAttribute="top" secondItem="U0F-A6-9ly" secondAttribute="bottom" constant="25" id="fef-Vf-Bvh"/>
+                            <constraint firstItem="RP9-AZ-nsG" firstAttribute="leading" secondItem="mHz-8J-fAs" secondAttribute="leading" constant="30" id="h0M-sk-Ln2"/>
+                            <constraint firstItem="yLt-wi-xQL" firstAttribute="top" secondItem="RVK-kY-giR" secondAttribute="bottom" constant="31" id="iSa-iC-vWy"/>
+                            <constraint firstItem="0F9-mN-blT" firstAttribute="top" secondItem="RVK-kY-giR" secondAttribute="bottom" constant="5" id="kam-TE-BU4"/>
+                            <constraint firstAttribute="centerY" secondItem="U0F-A6-9ly" secondAttribute="centerY" constant="30" id="mhF-qO-PXo"/>
+                            <constraint firstItem="yLt-wi-xQL" firstAttribute="leading" secondItem="mHz-8J-fAs" secondAttribute="leading" constant="168" id="r9a-iz-cJX"/>
+                            <constraint firstItem="f38-Y8-rBQ" firstAttribute="width" secondItem="sZ8-uK-7Le" secondAttribute="width" id="wRr-wm-5QW"/>
+                            <constraint firstItem="Z29-Th-VLO" firstAttribute="top" secondItem="RP9-AZ-nsG" secondAttribute="bottom" id="wXH-Cp-a4k"/>
+                            <constraint firstItem="f38-Y8-rBQ" firstAttribute="top" secondItem="RVK-kY-giR" secondAttribute="bottom" constant="55" id="wj2-dB-sUV"/>
+                            <constraint firstAttribute="centerX" secondItem="RP9-AZ-nsG" secondAttribute="centerX" id="yNj-dX-Vrz"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="aboveLogoTopContraint" destination="iSa-iC-vWy" id="qQf-Dt-zJv"/>
+                        <outlet property="aboveStartSpaceConstraint" destination="wj2-dB-sUV" id="CQO-fz-SBi"/>
+                        <outlet property="centerTitleConstraint" destination="mhF-qO-PXo" id="OW1-QJ-PpO"/>
+                        <outlet property="differenceSpaceConstraint" destination="FBS-Ye-I3n" id="fnD-Pb-MMr"/>
+                        <outlet property="titleTopSpaceConstraint" destination="kam-TE-BU4" id="hqh-oo-Yok"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6rY-Dz-5hv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1642" y="1348"/>
+        </scene>
+        <!--Tutorial2 View Controller-->
+        <scene sceneID="VQP-CL-1Nt">
+            <objects>
+                <viewController storyboardIdentifier="Tutorial2ViewController" id="9ZL-0r-Nl3" customClass="Tutorial2ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iKj-T1-lSk"/>
+                        <viewControllerLayoutGuide type="bottom" id="s0X-hD-tqT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="31V-zd-QCm">
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="TrackCoach" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TWd-E1-bNX">
+                                <rect key="frame" x="296" y="25" width="177" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="33"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Undo Stop" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cjt-yt-jpW">
+                                <rect key="frame" x="327" y="83" width="115" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZZ-M8-rre">
+                                <rect key="frame" x="30" y="136" width="708" height="432"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">If you accidentaly press stop during a race, don't worry! With the new Undo Stop feature, TrackCoach will continue with no lost time, as if you had never stopped.</string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.47843137250000001" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="zZZ-M8-rre" secondAttribute="trailing" constant="30" id="2ML-3Y-HJ8"/>
+                            <constraint firstAttribute="centerX" secondItem="TWd-E1-bNX" secondAttribute="centerX" id="9Bg-kR-tFo"/>
+                            <constraint firstItem="TWd-E1-bNX" firstAttribute="top" secondItem="iKj-T1-lSk" secondAttribute="bottom" constant="5" id="M3g-y7-Ejq"/>
+                            <constraint firstAttribute="centerX" secondItem="cjt-yt-jpW" secondAttribute="centerX" id="Xom-sL-SWg"/>
+                            <constraint firstItem="s0X-hD-tqT" firstAttribute="top" secondItem="zZZ-M8-rre" secondAttribute="bottom" id="dFI-we-7hh"/>
+                            <constraint firstItem="cjt-yt-jpW" firstAttribute="top" secondItem="TWd-E1-bNX" secondAttribute="bottom" constant="19" id="iJU-4q-CFC"/>
+                            <constraint firstItem="zZZ-M8-rre" firstAttribute="leading" secondItem="31V-zd-QCm" secondAttribute="leading" constant="30" id="jwi-vO-EWy"/>
+                            <constraint firstItem="zZZ-M8-rre" firstAttribute="top" secondItem="cjt-yt-jpW" secondAttribute="bottom" constant="24" id="rqR-RK-r2p"/>
+                            <constraint firstAttribute="centerX" secondItem="zZZ-M8-rre" secondAttribute="centerX" id="xSC-Pr-9LM"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qsJ-Kv-mex" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2536" y="1348"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Icon.png" width="76" height="76"/>
+        <image name="transparent.png" width="126" height="126"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
